# global-hotkeys

./: Cargo.toml  default-settings.toml
src/: config.rs  main.rs
