[package]
name = "global-hotkeys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive", "cargo"] }
config = "0.13.3"
input = "0.8.3"
itertools = "0.11.0"
libc = "0.2.148"
raw_tty = "0.1.0"
serde = { version = "1.0.188", features = ["derive"] }
